<resources>
    <string name="app_name">Healthy</string>
    <string name="actionBar_journal">Дневник</string>
    <string name="actionBar_food">Список блюд</string>
    <string name="actionBar_addFood">Добавление блюда</string>
    <string name="actionBar_addJournal">Добавление записи</string>
    <string name="settings">Настройки</string>
    <string name="food_name">Введите название блюда</string>
    <string name="content_food">Введите содержание КБЖУ на 100г блюда</string>
    <string name="protein">Белки</string>
    <string name="fats">Жиры</string>
    <string name="сarbs">Углеводы</string>
    <string name="calories">Каллории</string>
    <string name="Y">У</string>
    <string name="J">Ж</string>
    <string name="B">Б</string>
    <string name="text_enter_the_food">Выберите блюдо</string>
    <string name="enter_weight_of_food">Введите вес блюда в граммах</string>
    <string name="gramm">Г.</string>
    <string name="theme_settings">Тема приложения</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Темная</string>
    <string name="theme_auto">Авто</string>
</resources>