<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".presentation.fragments.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text_size"
        android:text="@string/theme_settings"
        android:layout_marginStart="30sp"
        style="@style/TextStyle"/>

    <RadioGroup
        android:id="@+id/themeButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            android:textSize="@dimen/default_text_size"
            style="@style/TextStyle"/>

        <RadioButton
            android:id="@+id/rbDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:textSize="@dimen/default_text_size"
            style="@style/TextStyle"/>

        <RadioButton
            android:id="@+id/rbAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_auto"
            android:textSize="@dimen/default_text_size"
            style="@style/TextStyle"/>
    </RadioGroup>
</LinearLayout>