<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_app"
    app:startDestination="@id/fragment_journal">

    <fragment
        android:id="@+id/fragment_journal"
        android:name="com.example.healthy.presentation.fragments.journal.JournalFragment"
        android:label="@string/actionBar_journal"
        tools:layout="@layout/fragment_journal" >
        <action
            android:id="@+id/action_fragment_journal_to_fragment_add_journal"
            app:destination="@id/fragment_add_journal"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/fragment_add_journal" />
    </fragment>

    <fragment
        android:id="@+id/fragment_add_journal"
        android:name="com.example.healthy.presentation.fragments.journal.AddJournalFragment"
        android:label="@string/actionBar_addJournal"
        tools:layout="@layout/fragment_add_journal"/>

    <fragment
        android:id="@+id/fragment_food"
        android:name="com.example.healthy.presentation.fragments.food.FoodFragment"
        android:label="@string/actionBar_food"
        tools:layout="@layout/fragment_food" >
        <action
            android:id="@+id/action_fragment_food_to_fragment_add_food"
            app:destination="@id/fragment_add_food"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/fragment_add_food" />
        <action
            android:id="@+id/action_fragment_food_to_editFoodFragment"
            app:destination="@id/fragment_edit_food"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/fragment_edit_food"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_add_food"
        android:name="com.example.healthy.presentation.fragments.food.AddFoodFragment"
        android:label="@string/actionBar_addFood"
        tools:layout="@layout/fragment_add_food">
    </fragment>

    <fragment
        android:id="@+id/fragment_edit_food"
        android:name="com.example.healthy.presentation.fragments.food.EditFoodFragment"
        android:label="Редактирование блюда" >
        <argument
            android:name="foodTitle"
            app:argType="string" />
        <action
            android:id="@+id/action_fragment_edit_food_to_fragment_food"
            app:destination="@id/fragment_food"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/fragment_food"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.example.healthy.presentation.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>