<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"
    tools:context=".presentation.fragments.food.AddFoodFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/nunito_bold"
        android:textSize="@dimen/default_text_size"
        android:text="@string/food_name"
        style="@style/TextColor"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtBox_foodName"
        style="@style/ItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/nunito_bold"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:minHeight="48dp"
        android:textSize="@dimen/large_text_size"
        tools:ignore="SpeakableTextPresentCheck"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/nunito_bold"
        android:textSize="@dimen/default_text_size"
        android:text="@string/content_food"
        style="@style/TextColor"/>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:flexWrap="wrap"
        app:justifyContent="space_between"
        >

        <FrameLayout
            android:layout_width="140sp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBox_protein"
                style="@style/CardBackground"
                tools:ignore="SpeakableTextPresentCheck"/>

            <TextView
                style="@style/ItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/ToxicGreen"
                android:fontFamily="@font/nunito_bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/protein"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                tools:ignore="TextContrastCheck" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="140sp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBox_fat"
                style="@style/CardBackground"
                tools:ignore="SpeakableTextPresentCheck"/>

            <TextView
                style="@style/ItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="#C1CC41"
                android:fontFamily="@font/nunito_bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/fats"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                tools:ignore="TextContrastCheck" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="140sp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBox_сarbs"
                style="@style/CardBackground"
                tools:ignore="SpeakableTextPresentCheck"/>

            <TextView
                style="@style/ItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="#41CCC4"
                android:fontFamily="@font/nunito_bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/сarbs"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                tools:ignore="TextContrastCheck" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="140sp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBox_calories"
                style="@style/CardBackground"
                tools:ignore="SpeakableTextPresentCheck"/>

            <TextView
                style="@style/ItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="#FFB59E"
                android:fontFamily="@font/nunito_bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/calories"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                tools:ignore="TextContrastCheck" />
        </FrameLayout>
    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>