<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.journal.AddJournalFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_the_food"
        android:textSize="@dimen/default_text_size"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        style="@style/TextStyle"/>

    <Spinner
        android:id="@+id/foodSpinner"
        style="@style/SpinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:spinnerMode="dropdown"
        tools:ignore="SpeakableTextPresentCheck"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_weight_of_food"
        android:textSize="@dimen/default_text_size"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="5dp"
        style="@style/TextStyle"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            style="@style/ItemBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBox_weight"
                style="@style/ItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/text_gramm"
                android:inputType="numberDecimal"
                android:textSize="@dimen/default_text_size"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/text_gramm"
                android:text="@string/gramm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="@dimen/default_text_size"
                android:layout_alignParentEnd="true"
                style="@style/TextStyle"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>