<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="13dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                app:flexWrap="wrap"
                app:alignItems="center">

                <TextView
                    android:id="@+id/rv_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="@dimen/large_text_size"
                    style="@style/TextStyle"/>

                <LinearLayout
                    android:background="@drawable/background_calories"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calories"
                        android:layout_gravity="center_vertical"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/rv_count_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_text_size"
                        android:textColor="#802929"
                        style="@style/TextStyle"/>
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text_size"
                    android:background="@drawable/bg_protein_fats_carbs"
                    android:backgroundTint="#41CC6A"
                    android:text="@string/B"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/rv_count_protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/small_text_size"

                    style="@style/TextStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text_size"
                    android:background="@drawable/bg_protein_fats_carbs"
                    android:backgroundTint="#C1CC41"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/J"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/rv_count_fats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="#C1CC41"
                    style="@style/TextStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text_size"
                    android:background="@drawable/bg_protein_fats_carbs"
                    android:backgroundTint="#41CCC4"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/Y"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/rv_count_carbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="#41CCC4"
                    style="@style/TextStyle"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>