<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout
    android:id="@+id/swipeRevealLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:mode="same_level"
    app:dragEdge="right"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_Edit_Food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#60f542"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_template"
            android:src="@drawable/ic_edit"/>
        <ImageButton
            android:id="@+id/btn_Delete_Food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FF3D00"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded_template"
            android:src="@drawable/ic_delete"/>
        </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            style="@style/RecyclerBackground">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:alignItems="center"
                app:justifyContent="space_between">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/large_text_size"
                        android:layout_marginBottom="5dp"
                        style="@style/TextStyle"/>

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flexWrap="wrap">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/small_text_size"
                                android:background="@drawable/bg_protein_fats_carbs"
                                android:backgroundTint="#41CC6A"
                                android:paddingStart="6sp"
                                android:paddingEnd="6sp"
                                android:text="@string/B"
                                android:textColor="@color/white"/>

                            <TextView
                                android:id="@+id/rv_count_protein"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="10dp"
                                android:textSize="@dimen/small_text_size"
                                style="@style/TextStyle"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/small_text_size"
                                android:background="@drawable/bg_protein_fats_carbs"
                                android:backgroundTint="#C1CC41"
                                android:paddingStart="4sp"
                                android:paddingEnd="4sp"
                                android:text="@string/J"
                                android:textColor="@color/white"/>

                            <TextView
                                android:id="@+id/rv_count_fats"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="10dp"
                                android:textSize="@dimen/small_text_size"
                                android:textColor="#C1CC41"
                                style="@style/TextStyle"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/small_text_size"
                                android:background="@drawable/bg_protein_fats_carbs"
                                android:backgroundTint="#41CCC4"
                                android:paddingStart="6sp"
                                android:paddingEnd="6sp"
                                android:text="@string/Y"
                                android:textColor="@color/white"/>

                            <TextView
                                android:id="@+id/rv_count_carbs"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textSize="@dimen/small_text_size"
                                android:textColor="#41CCC4"
                                style="@style/TextStyle"/>
                        </LinearLayout>
                    </com.google.android.flexbox.FlexboxLayout>
                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/bg_protein_fats_carbs"
                    android:backgroundTint="#FFB59E"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calories"
                        android:layout_gravity="center_vertical"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/rv_count_calories"
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:textColor="#802929"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>


        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>